--- a/Question2.ipynb
+++ b/Question2.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/grantboy6396/REU-Summer-2019/blob/master/Question2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/HakiemGrant/REU-Summer-2019/blob/master/Question2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,7 @@
         "num=0\n",
         "for num in range(0,N):\n",
         "   \n",
-        "   if num % 3==0 or num%7==0 or num%13==0:\n",
+        "   if num % a==0 or num%b==0 or num%c==0:\n",
         "       count+=1\n",
         "print(f\"There are {count} integers between 0 and {N} that are divisible by at least one of 3, 7, 13 \")\n",
         "\n",
